test/langtools/tools/javac/datum/DatumShouldDeclareAtLeastOneFieldTest.out
DatumShouldDeclareAtLeastOneFieldTest.java:8:34: compiler.err.datum.must.declare.at.least.one.field
DatumShouldDeclareAtLeastOneFieldTest.java:10:25: compiler.err.datum.must.declare.at.least.one.field
2 errors
